# helios-omicron-brand

./: .gitignore  Cargo.toml  Makefile  README.md
.github/buildomat/jobs/: pkg.sh
brand/: Cargo.toml
brand/src/: common.rs  lib.rs  pkg.rs  unix.rs  unpack.rs
config/: config.xml  helios-omicron1  platform.xml  profile.xml
man/: omicron1.5  omicron1.7
pkg/: baseline.p5m  brand.p5m  incorporation.p5m
smf/: baseline.xml
src/: ips.rs  lib.rs  metadata.rs  pkg.rs  tree.rs  unpack.rs
utils/: Cargo.toml
utils/src/: copyq.rs  defaults.rs  ips.rs  lib.rs  metadata.rs  tree.rs
