[package]
name = "helios-omicron-brand"
version = "0.0.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
anyhow = { workspace = true }
flate2 = { workspace = true }
getopts = { workspace = true }
helios-build-utils = { path = "../utils" }
libc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
walkdir = { workspace = true }
